[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum="0.4.3"
tokio = { version = "1.0", features = ["full"] }
base64 = "0.13" # base64 编码/解码
# tokio + rustls
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "mysql" ] }
